@@ -1,3 +1,7 @@
+2010-03-05  Werner Koch  <wk@g10code.com>
+
+	* gpgcemgr.c: Add options to register a device and activate it.
+
 2010-02-24  Werner Koch  <wk@g10code.com>
 
 	* gpgcemgr.c: New.
